--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,12 @@
 {
-    "version":2,
-    "builds":[
-        {"src": "*.js", "use":"@vercel/node"}
+    "version": 2,
+    "builds": [
+        { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest":"/"
-        }
+        { "src": "/user(.*)", "dest": "/index.js" },
+        { "src": "/questions(.*)", "dest": "/index.js" },
+        { "src": "/answer(.*)", "dest": "/index.js" },
+        { "src": "/(.*)", "dest": "/index.js" }
     ]
 }
